Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTIEBRNET.CS


        private static class BTIEBR_64
        {
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCConfig", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCConfig(UInt32 configval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCConfigEx", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCConfigEx(UInt32 configval, UInt16 count, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCConfigMsg", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_BCConfigMsg(UInt32 configval, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCCreateList", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_BCCreateList(UInt32 listconfigval, Int32 count, UInt32 msgconfigval, UInt16 cwd, UInt16[] data, Int32 rtlink, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCCreateMsg", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_BCCreateMsg(UInt32 configval, UInt16 cwd, UInt16[] data, Int32 rtlink, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCPause", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_BCPause(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCPauseCheck", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCPauseCheck(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCResume", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_BCResume(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedAgain", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedAgain(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedBranch", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedBranch(UInt32 condition, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedBranchUpdate", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedBranchUpdate(Int32 destindex, Int32 opcodeindex, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedBuild", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedBuild(UInt16 nummsgs, UInt32[] msgaddr, UInt16[] freq, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedCall", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedCall(UInt32 condition, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedCallUpdate", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedCallUpdate(Int32 destindex, Int32 opcodeindex, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedEntry", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedEntry(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedFrame", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedFrame(UInt32 timeval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedFrameEnd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedFrameEnd(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedFrameStart", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedFrameStart(UInt32 timeval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedGap", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedGap(UInt16 gapval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedHalt", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedHalt(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedLog", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedLog(UInt32 condition, UInt16 tagval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedMsg", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedMsg(UInt32 msgaddr, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedPause", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedPause(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedPulse", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedPulse(Int32 dionum, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedPulse0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedPulse0(Int32 dionum, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedPulse1", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedPulse1(Int32 dionum, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedRestart", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedRestart(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedRetry", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedRetry(UInt32 condition, UInt16 retries, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSchedReturn", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSchedReturn(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSetDefaultGap", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSetDefaultGap(Int32 gapval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSetTimeout", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSetTimeout(UInt16 timeoutval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCSyncDefine", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCSyncDefine(Int32 enableflag, UInt16 syncmask, UInt16 pinpolarity, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCTransmitMsg", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCTransmitMsg(ref XMITFIELDSEBR xmitfieldsval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_BCTriggerDefine", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_BCTriggerDefine(Int32 enableflag, UInt16 trigmask, UInt16 trigval, UInt16 pinpolarity, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_ChGetInfo", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTIEBR_ChGetInfo(UInt16 infotype, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_ChIsBM", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ChIsBM(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_ChIsEBR", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ChIsEBR(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_ChIsM", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ChIsM(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_ChIsS", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ChIsS(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_ChStart", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ChStart(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_ChStop", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_ChStop(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_CmdMaxLoopRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTIEBR_CmdMaxLoopRd(Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_CmdMaxLoopWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTIEBR_CmdMaxLoopWr(UInt16 countval, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_CmdShotRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_CmdShotRd(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_CmdShotWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_CmdShotWr(Int32 value, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_CmdSkipRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_CmdSkipRd(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTIEBR64.DLL", EntryPoint = "BTIEBR_CmdSkipWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTIEBR_CmdSkipWr(Int32 value, Int32 index, Int32 channum, IntPtr handleval);
